Fix bottom padding on collapsed panel

--- a/view/layout/index.css
+++ b/view/layout/index.css
@@ -16,6 +16,10 @@
       "M"
       "S";
     padding-bottom: 450px;
+
+    @nest body.is-main-collapsed & {
+      padding-bottom: 160px;
+    }
   }
 
   @media (width >= 908px) and (width < 1230px) {
